--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
-    current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video. Use whichever style sheet you like best! -->
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="startup text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
-          <div class="col-lg-12 my-auto">
-            <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-lg-12 my-auto">
-
-                            <!-- Begin Mailchimp Signup Form -->
-                <div id="mc_embed_signup">
-                <form action="https://coolwebsite.us7.list-manage.com/subscribe/post?u=91a83996344a9675ec2c8d10f&amp;id=5cdb311bb2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_91a83996344a9675ec2c8d10f_5cdb311bb2" tabindex="-1" value=""></div>
-                    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Find our more" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                    </div>
-                </form>
-                </div>
-
-                <!--End mc_embed_signup-->
-          </div>
-        </div>
-      </div>
-    </header>
-
-  </body>
-
+<head>
+    <title>Animated CSS</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 class="animated infinite bounce">PARABÉNS MÃAAAEEE !!!!</h1>
+    <img src="https://scontent.fplu13-1.fna.fbcdn.net/v/t1.0-9/49251289_1798879023556209_7570103094420176896_n.jpg?_nc_cat=101&_nc_ht=scontent.fplu13-1.fna&oh=282985bb1fc93ad67fd77993c0c69e2c&oe=5C9D4226" width="200" height="400">
+</body>
 </html>
