--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animated CSS</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Layout Master</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body> 
-    <h1 class="animated infinite bounce">PARABÉNS MÃAAAEEE !!!!</h1>
-    <img src="https://scontent.fplu13-1.fna.fbcdn.net/v/t1.0-9/49251289_1798879023556209_7570103094420176896_n.jpg?_nc_cat=101&_nc_ht=scontent.fplu13-1.fna&oh=282985bb1fc93ad67fd77993c0c69e2c&oe=5C9D4226" width="200" height="400">
+<body>
+  <nav class="zone blue sticky">
+    <ul class="main-nav">
+        <li><a href="">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Our Team</a></li>
+        <li class="push"><a href="">Contacts</a></li>
+    </ul>
+  </nav>
+    <div class="container">
+        <img class="cover" src="./img/undraw.png">
+    </div>
+    <div class="zone blue grid-wrapper">
+        <div class="box zone"><img src="./img/files_2.png"></div>
+        <div class="box zone"><img src="./img/server_2_2.png"></div>
+        <div class="box zone"><img src="./img/monitor_settings_2.png"></div>
+        <div class="box zone"><img src="./img/server_3.png"></div>
+        <div class="box zone"><img src="./img/data_storage_2_2.png"></div>
+        <div class="box zone"><img src="./img/monitor_coding_2.png"></div>
+        <div class="box zone"><img src="./img/desktop_analytics_2.png"></div>
+        <div class="box zone"><img src="./img/server_safe_2.png"></div>
+    </div>
+    <footer class="zone yellow">Zero => Mastery !!!</footer>
 </body>
 </html>
