--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Layout Master</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Gradient Background</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav class="zone blue sticky">
-    <ul class="main-nav">
-        <li><a href="">About</a></li>
-        <li><a href="">Products</a></li>
-        <li><a href="">Our Team</a></li>
-        <li class="push"><a href="">Contacts</a></li>
-    </ul>
-  </nav>
-    <div class="container">
-        <img class="cover" src="./img/undraw.png">
-    </div>
-    <div class="zone blue grid-wrapper">
-        <div class="box zone"><img src="./img/files_2.png"></div>
-        <div class="box zone"><img src="./img/server_2_2.png"></div>
-        <div class="box zone"><img src="./img/monitor_settings_2.png"></div>
-        <div class="box zone"><img src="./img/server_3.png"></div>
-        <div class="box zone"><img src="./img/data_storage_2_2.png"></div>
-        <div class="box zone"><img src="./img/monitor_coding_2.png"></div>
-        <div class="box zone"><img src="./img/desktop_analytics_2.png"></div>
-        <div class="box zone"><img src="./img/server_safe_2.png"></div>
-    </div>
-    <footer class="zone yellow">Zero => Mastery !!!</footer>
+<body id="gradient">
+    <h1>Background generator</h1>
+    <input class="color1" type="color" name="color1" value="#00ff00">
+    <input class="color2" type="color" name="color2" value="#ff0000">
+    <h2>Current CSS Background</h2>
+    <h3></h3>
+    
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
