--- a/index.html
+++ b/index.html
@@ -1,19 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gradient Background</title>
-    <link rel="stylesheet" href="style.css">
+  <!-- Theme Made By www.w3schools.com -->
+  <title>Feliz Ano Novo Larissa!!!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
+  
 </head>
-<body id="gradient">
-    <h1>Background generator</h1>
-    <input class="color1" type="color" name="color1" value="#00ff00">
-    <input class="color2" type="color" name="color2" value="#ff0000">
-    <h2>Current CSS Background</h2>
-    <h3></h3>
-    
-    <script type="text/javascript" src="script.js"></script>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">Larissa</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">VIAGENS</a></li>
+        <li><a href="#services">DESEJOS</a></li>
+        <li><a href="#portfolio">FORÇA</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron text-center">
+  <h1 class="animated pulse infinite">Feliz Ano Novo</h1> 
+  <p>Meu anjo</p>
+  <img src="foto1.jpg" width="300px" height="500px">
+</div>
+
+<!-- Container (About Section) -->
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2 class="animated bounce infinite">Viagens !!</h2><br>
+      <h4>Que o próximo ano seja repleto de viagens !!</h4><br>
+      <p>E que nós aproveitemos tudo o que for possível! Conhecendo de zoológicos até montanhas!</p>
+    </div>
+    <div class="col-sm-4">
+      <img src="foto2.jpg" width="200px" height="300px">
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-grey">
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="foto3.jpg" width="200px" height="300px">
+    </div>
+    <div class="col-sm-8">
+      <h2 class="animated bounce infinite">Ouro Pretoo!</h2><br>
+      <h4>Desejo que você tenha muita tranquilidade em Ouro Preto esse ano!!</h4><br>
+      <p><strong>Eu sempre estarei lá com você!</strong></p>
+    </div>
+  </div>
+</div>
+
+<!-- Container (Services Section) -->
+<div id="services" class="container-fluid text-center">
+  <h2 class="animated bounce infinite">Feliz Ano Novo !!!</h2>
+  <h4>Te desejo nesse ano:</h4>
+  <br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-off logo-small"></span>
+      <h4>FORÇA</h4>
+      <p>Pra superar essa fase da UFOP</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-heart logo-small"></span>
+      <h4>AMOR</h4>
+      <p>Eu</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <h4>TRABALHO</h4>
+      <p>Projetos de Extensão</p>
+    </div>
+  </div>
+  <br><br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-leaf logo-small"></span>
+      <h4>NATUREZA</h4>
+      <p>Pico do Itacolomi</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-certificate logo-small"></span>
+      <h4>CONQUISTAS</h4>
+      <p>Que o diploma chegue logo!!!</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-wrench logo-small"></span>
+      <h4 style="color:#303030;">TRABALHO!! kkkk</h4>
+      <p>Mais projetos !!!</p>
+    </div>
+  </div>
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div id="portfolio" class="container-fluid text-center bg-grey">
+  <h2 class="animated bounce infinite">Que nosso amor sempre seja a força para superar todos os problemas!</h2><br>
+  <h4>Olha nós ai!!!</h4>
+  <div class="row text-center slideanim">
+    <div class="col-sm-6">
+      <div class="thumbnail">
+        <img src="foto5.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Estação do MOVE</strong></p>
+        <p>Nosso dia..</p>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="thumbnail">
+        <img src="foto6.jpg" alt="New York" width="400" height="300">
+        <p><strong>Estação do MOVE</strong></p>
+        <p>1 ano depois...</p>
+      </div>
+    </div>
+  </div><br>
+  
+  <h2 class="animated bounce infinite">O que as pessoas dizem ?</h2>
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <h4>"Vocês são um casal tão bonitinho!"<br><span>Sandra Minghin</span></h4>
+      </div>
+      <div class="item">
+        <h4>"Mô fi, ela ama você!"<br><span>Bárbara Santos</span></h4>
+      </div>
+      <div class="item">
+        <h4>"Cê ta muito de boa véi, olha a namorada que você tem.."<br><span>Paulo Carneiro</span></h4>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+<footer class="container-fluid text-center">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a>
+  <p claas="animated bounce infinite">Feito com amor por Guilherme Melo </p>
+</footer>
+
 </body>
 </html>
